# langchain-project

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
crewai/: 1. basic_crewai_groq.ipynb  2.Multi-agent_ai_banking_research.ipynb  3-crew-ai-powered-demo.ipynb  4-serial-parallel-operation.ipynb  4.1-serial-parallel-operation-serptool.ipynb
crewai/content/: fmcg_ai_executive_summary.md  insurance_claim_assessment.md
faiss_store/: faiss.index  metadata.pkl
langchain/: 1-langchainintro.ipynb  2-modelintegration.ipynb  3-tools.ipynb  4-messages.ipynb  5-structuredoutput.ipynb  6-middleware.ipynb
langgraph/2-HumanInLoop/: 2-humanInLoop.ipynb
langgraph/3-MCP/: client.py  mathserver.py  weather.py
langgraph/4-RAG/: 4.1-document.ipynb  4.2-pdf_loader.ipynb
langgraph/4-RAG/rag_modular_coding/: app.py
langgraph/4-RAG/rag_modular_coding/src/: data_loader.py  embedding.py  search.py  vectorstore.py
